# claude-code-scrubber

./: .claude-code-scrubber.toml  .gitignore  README.md  pyproject.toml  transcript-scrubber-prompt.md
debate/: arena-battle.html  arena-battle.md  court-proceedings.html  court-proceedings.md  debate-claude-crossreview.md  debate-claude-report.md  debate-final-verdict.md  debate-team-crossreview.md  debate-team-report.md  debate.html  multiverse-analysis.html  multiverse-analysis.md  showboat-evidence.html  showboat-evidence.md  spectacle-showdown.html  spectacle-showdown.md
research/: sensitive-data-scrubbing-tools-research.md
src/claude_code_scrubber/: __init__.py  cli.py  config.py  patterns.py  scrubber.py  test_scrubber.py
src/transcript_scrub/: __init__.py  allowlists.py  cli.py  config.py  models.py
src/transcript_scrub/parser/: __init__.py  base.py  json_web.py  jsonl.py
src/transcript_scrub/redactor/: __init__.py  engine.py  formatter.py  interactive.py
src/transcript_scrub/scanner/: __init__.py  api_keys.py  base.py  credentials.py  crypto.py  network.py  paths.py  pii.py  registry.py
tests/: conftest.py
tests/fixtures/: aws_cli_output.jsonl  clean_session.jsonl  database_errors.jsonl  env_file_paste.jsonl  git_config_leak.jsonl  simple_session.jsonl  web_session.json
tests/test_integration/: test_cli.py  test_full_pipeline.py
tests/test_parser/: test_json_web_parser.py  test_jsonl_parser.py
tests/test_redactor/: test_cli.py  test_config.py  test_engine.py
tests/test_scanner/: test_api_keys.py  test_credentials.py  test_crypto.py  test_network.py  test_paths.py  test_pii.py
