[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-scrubber"
version = "0.1.0"
description = "Scrub personal and sensitive information from Claude Code session transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
claude-code-scrubber = "transcript_scrub.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript_scrub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/transcript_scrub"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
